--- a/style.css
+++ b/style.css
@@ -1,26 +1,104 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+:root {
+  ---primaryColor: #5cdb95;
+  ---secondaryColor: #fff;
 }
 
+body {
+  background-color: var(---primaryColor);
+}
+.container {
+  width: 100%;
+}
 .box {
-  padding: 20px 50px;
-  background-color: #f8f8f8;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 25px;
+  width: 60%;
+  padding: 50px;
+  background-color: var(---secondaryColor);
+  margin: 50px auto;
+  border-radius: 15px;
 }
-.positions {
-  position: absolute;
-  right: 0;
-  top: 0;
+.display {
+  position: relative;
 }
-.positions button {
-  background-color: transparent;
-  font-family: inherit;
-  border: none;
+/* <!-- Display Value Input --> */
+#inputDisplay {
+  width: 100%;
   padding: 5px 10px;
-  color: #bdbdbd;
+  outline: none;
+  font-size: 24px;
+  border-radius: 5px;
+}
+/* <!-- Password Show/Hidden --> */
+.passIcon {
+  padding: 7px 15px;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+i.p-hidden {
+  display: none;
+}
+/* <!-- Dialogue Box --> */
+.dialogueBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  user-select: none;
+}
+.copy,
+.copied {
+  background-color: #ffd700;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.copied {
+  display: none;
+}
+/* <!-- Password Checker --> */
+.strongPass > i {
+  color: green;
+}
+.strongPass {
+  display: none;
+}
+.weakPass > i {
+  color: #ff5733;
+}
+/* <!-- Range Bar --> */
+#rangeBar {
+  width: 100%;
+}
+/* <!-- CheckBox --> */
+.checkBox-Container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  user-select: none;
+}
+.checkboxes {
+  display: flex;
+  align-items: center;
+}
+.checkboxes input[type="checkbox"] {
+  margin: 0 3px 0 10px;
+}
+/* <!-- Button --> */
+#btn {
+  padding: 15px;
+  font-size: 18px;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
