--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 /* <!-- Password Show/Hidden --> */
 .passIcon {
-  padding: 7px 15px;
+  padding: 10px 15px;
   font-size: 24px;
   position: absolute;
   top: 0;
@@ -77,6 +77,10 @@ i.p-hidden {
 /* <!-- Range Bar --> */
 #rangeBar {
   width: 100%;
+}
+span#rangeDisplay {
+  margin-left: 5px;
+  font-weight: 600;
 }
 /* <!-- CheckBox --> */
 .checkBox-Container {
