--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 
 body {
   background-color: #ffd700;
-
 }
 .container {
   width: 100%;
@@ -16,11 +15,26 @@ body {
 .box {
   width: 60%;
   padding: 50px;
-  /* background-color: rgba(0, 0, 0, 0.1); */
   background-color: #fff;
   margin: 50px auto;
   border-radius: 15px;
   text-align: center;
+  position: relative;
+}
+#demo {
+  padding: 10px 20px;
+  position: absolute;
+  left: 50px;
+  border: 1px solid #ffa400;
+  background: transparent;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+#demo:hover {
+  background-color: #ffa400;
+  color: #fff;
 }
 .box h1 {
   margin-bottom: 35px;
@@ -35,7 +49,7 @@ body {
   outline: none;
   font-size: 24px;
   border-radius: 5px;
-  border: 1px solid rgba(255, 213, 0, 0.5);
+  border: 1px solid #ffa400;
 }
 /* <!-- Password Show/Hidden --> */
 .passIcon {
@@ -59,14 +73,15 @@ i.p-hidden {
 }
 .copy,
 .copied {
-  background-color: #ffd700;
   padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s linear;
+  border: 1px solid #ffa400;
 }
 .copy:hover {
   background-color: #ffa400;
+  color: #fff;
 }
 .copied {
   display: none;
@@ -120,8 +135,9 @@ span#rangeDisplay {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #ffd700;
+  background-color: transparent;
   transition: all 0.3s linear;
+  border: 1px solid #ffa400;
   font-weight: 500;
 }
 #btn:hover {
